--- a/co_payment.html
+++ b/co_payment.html
@@ -6,18 +6,18 @@
     Tutorial 13
     Tutorial Case
     
-    Coctura Order Page
+    Coctura Payment Page
     Author: Stephen Csengo
     Date:   4/24/2024
 
-    Filename: co_order.html
+    Filename: co_payment.html
    -->
 
-    <title>Coctura Orders</title>
+    <title>Coctura Payment Form</title>
     <meta charset="utf-8" />
     <link href="co_base.css" rel="stylesheet" />
-    <link href="co_layout1.css" rel="stylesheet" />
-    <script src="co_order.js" async></script>
+    <link href="co_layout2.css" rel="stylesheet" />
+    <script src="co_payment.js" async></script>
   </head>
 
   <body>
@@ -52,64 +52,42 @@
         </ul>
       </nav>
     </header>
-    <section id="summary">
-      <h1>DigiPot<sup>&reg;</sup> Multi-Functional Pressure Cooker</h1>
-      <h2>by <a href="#">Smart Chef</a></h2>
-      <h3>
-        Customer Rating (1,028 votes):
-        <img src="co_stars.png" alt="4.5 stars" />
-      </h3>
-      <img src="co_cooker.png" alt="" />
-      <p>
-        DigiPot is a smart and safe electric pressure cooker, speeding up
-        cooking times while still using up to 70% less energy. The DigiPot
-        multi-use cooker is programmable and can act as a pressure cooker, slow
-        cooker, rice cooker, and steamer. Cook your favorite dishes with the
-        press of a button. A 24-hour timer allows for delayed cooking. Comes in
-        4-, 6-, and 8-quart models.
-      </p>
-    </section>
 
-    <section id="orderSection">
-      <form
-        id="orderForm"
-        name="orderForm"
-        method="get"
-        action="co_payment.html"
-      >
+    <nav id="left">
+      <ul>
+        <li><a href="#">Shopping Cart</a></li>
+        <li><a href="#">Order History</a></li>
+        <li><a href="#">Returns</a></li>
+        <li class="newgroup"><a href="#">Your Account</a></li>
+        <li><a href="#">Payment Info</a></li>
+        <li><a href="#">Contact Info</a></li>
+        <li><a href="#">Preferences</a></li>
+        <li class="newgroup"><a href="#">Similar Items</a></li>
+        <li><a href="#">Specials</a></li>
+        <li><a href="#">Customer Reviews</a></li>
+        <li><a href="#">Manufacturer Page</a></li>
+      </ul>
+    </nav>
+    <section id="paySection">
+      <h1>Payment Form</h1>
+
+      <form id="order" name="order">
         <table id="orderTable">
           <caption>
-            Product Order
+            Your Order
           </caption>
           <tr>
-            <td colspan="3">
+            <td colspan="3" class="rightA">
               <input type="text" id="orderDate" name="orderDate" readonly />
             </td>
           </tr>
           <tr>
             <td>
-              <label for="model">Model</label>
-              <select name="model" id="model">
-                <option value="89.95">4-Quart ($89.95)</option>
-                <option value="129.95" selected>6-Quart ($129.95)</option>
-                <option value="159.95">8-Quart ($159.95)</option>
-              </select>
-              <input type="hidden" id="modelName" name="modelName" />
+              <input type="text" name="modelName" id="modelName" readonly />
             </td>
-            <td class="rightA">
-              <label for="qty">Qty</label>
-              <select name="qty" id="qty">
-                <option value="1" selected>1</option>
-                <option value="2">2</option>
-                <option value="3">3</option>
-                <option value="4">4</option>
-                <option value="5">5</option>
-                <option value="6">6</option>
-                <option value="7">7</option>
-                <option value="8">8</option>
-                <option value="9">9</option>
-                <option value="10">10</option>
-              </select>
+            <td>
+              <label>Qty: </label>
+              <input type="text" name="qty" id="qty" readonly />
             </td>
             <td>
               <input
@@ -123,47 +101,12 @@
           </tr>
           <tr>
             <td colspan="2">
-              <fieldset>
-                <legend>Protection Plan</legend>
-                <label
-                  ><input
-                    type="radio"
-                    id="plan_0"
-                    name="protection"
-                    value="0"
-                    checked
-                  />
-                  No protection plan ($0.00 each)</label
-                >
-                <label
-                  ><input
-                    type="radio"
-                    id="plan_1"
-                    name="protection"
-                    value="11.95"
-                  />
-                  1-year protection plan ($11.95 each)</label
-                >
-                <label
-                  ><input
-                    type="radio"
-                    id="plan_2"
-                    name="protection"
-                    value="15.95"
-                  />
-                  2-year protection plan ($15.95 each)</label
-                >
-                <label
-                  ><input
-                    type="radio"
-                    id="plan_3"
-                    name="protection"
-                    value="19.95"
-                  />
-                  3-year protection plan ($19.95 each)</label
-                >
-              </fieldset>
-              <input type="hidden" id="protectionName" name="protectionName" />
+              <input
+                type="text"
+                name="protectionName"
+                id="protectionName"
+                readonly
+              />
             </td>
             <td>
               <input
@@ -214,9 +157,79 @@
             </td>
           </tr>
         </table>
-        <input type="submit" id="buttonAdd" value="add to cart" />
+      </form>
+
+      <form id="payment" name="payment" method="post" action="co_temp.html">
+        <fieldset id="creditcard">
+          <legend>Credit Information</legend>
+
+          <label for="cardName">Name*</label>
+          <input name="cardName" id="cardName" required type="text" />
+
+          <fieldset id="cards">
+            <label class="cardLabel">Credit Card*</label>
+            <label class="cardLabel">
+              <input name="credit" value="amex" type="radio" required />
+              <img src="co_amex.png" alt="American Express" />
+            </label>
+            <label class="cardLabel">
+              <input name="credit" value="discover" type="radio" />
+              <img src="co_discover.png" alt="Discover" />
+            </label>
+            <label class="cardLabel">
+              <input name="credit" value="master" type="radio" />
+              <img src="co_master.png" alt="MasterCard" />
+            </label>
+            <label class="cardLabel">
+              <input name="credit" value="visa" type="radio" />
+              <img src="co_visa.png" alt="Visa" />
+            </label>
+          </fieldset>
+
+          <label for="cardNumber">Credit Card Number*</label>
+          <input
+            name="cardNumber"
+            id="cardNumber"
+            required
+            type="text"
+            pattern="^(?:4[0-9]{12}(?:[0-9]{3})?|5[1-5][0-9]{14}|6(?:011|5[0-9][0-9])[0-9]{12}|3[47][0-9]{13}|3(?:0[0-5]|[68][0-9])[0-9]{11}|(?:2131|1800|35\d{3})\d{11})$"
+          />
+
+          <label for="expMonth">Expiration Date*</label>
+          <select id="expMonth" name="expMonth">
+            <option value="mm">mm</option>
+            <option value="01">01</option>
+            <option value="01">02</option>
+            <option value="01">03</option>
+            <option value="01">04</option>
+            <option value="01">05</option>
+            <option value="01">06</option>
+            <option value="01">07</option>
+            <option value="01">08</option>
+            <option value="01">09</option>
+            <option value="01">10</option>
+            <option value="01">11</option>
+            <option value="01">12</option>
+          </select>
+          <span> / </span>
+          <select id="expYear" name="expYear">
+            <option value="yy">yy</option>
+            <option value="2018">2018</option>
+            <option value="2019">2019</option>
+            <option value="2020">2020</option>
+            <option value="2021">2021</option>
+            <option value="2022">2022</option>
+          </select>
+
+          <label for="cvc">CVC*</label>
+          <input name="cvc" id="cvc" required pattern="^\d{3,4}$" type="text" />
+        </fieldset>
+
+        <p id="footnote">* - Required Item</p>
+        <input type="submit" id="subButton" value="Submit Payment" />
       </form>
     </section>
+
     <footer>
       <nav id="bottom">
         <ul>
